# python-project-lvl2

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: projectci.yml
gendiff/: __init__.py  data_parser.py  file_reader.py  generate_view_diff.py  generated_diff.py  getting_data.py  getting_date.py
gendiff/formaters/: formaters.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py
tests/fixtures/: result  result_json_flat  result_json_nest
